Add favicon generic

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
 	<link rel="stylesheet" href="{{site.baseurl}}/lib/css/zenburn.css">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico" />
+    {% include favicon.html %}
 
 	<script>
 		var link = document.createElement( 'link' );
